Fix CSS breaks on device width  above 800px

--- a/src/scss/subscribe.module.scss
+++ b/src/scss/subscribe.module.scss
@@ -96,8 +96,9 @@
       max-height: 300px;
     }
 
-    .subscribe-input {
+    .subscribe-inner {
       width: 90%;
+      
     }
   }
 }
